cleaned code and updated sales report
